--- a/app/src/main/res/layout/activity_dog_search_result.xml
+++ b/app/src/main/res/layout/activity_dog_search_result.xml
@@ -85,7 +85,6 @@
         app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
         app:layout_constraintStart_toStartOf="@id/guidelineStart"
         app:layout_constraintTop_toTopOf="@id/guidelineMid2"
-        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
         android:maxHeight="500dp"
         android:maxWidth="350dp">
 
@@ -93,117 +92,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-            <LinearLayout
+            <com.example.myapplication.RecipeList
+                android:id="@+id/rcplist"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <ImageButton
-                    android:id="@+id/imgBtn_rcp1"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
-                    android:scaleType="centerInside"
-                    android:layout_gravity="center_vertical"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:ignore="SpeakableTextPresentCheck"
-                    tools:srcCompat="@tools:sample/avatars" />
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_gravity="center_vertical">
-                    <TextView
-                        android:id="@+id/txt_rcp1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
-                        android:text="Recipe1"
-                        android:textColor="@color/black"
-                        android:textSize="24sp"/>
-                    <TextView
-                        android:id="@+id/txt_mat1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
-                        android:text="a, b, c ..."
-                        android:textColor="#7A7A7A"
-                        android:textSize="24sp"/>
-                </LinearLayout>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <ImageButton
-                    android:id="@+id/imgBtn_rcp2"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
-                    android:scaleType="centerInside"
-                    android:layout_gravity="center_vertical"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/imgBtn_rcp1"
-                    tools:ignore="SpeakableTextPresentCheck"
-                    tools:srcCompat="@tools:sample/avatars" />
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_gravity="center_vertical">
-                    <TextView
-                        android:id="@+id/txt_rcp2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
-                        android:text="Recipe2"
-                        android:textColor="@color/black"
-                        android:textSize="24sp"/>
-                    <TextView
-                        android:id="@+id/txt_mat2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
-                        android:text="d, e, f ..."
-                        android:textColor="#7A7A7A"
-                        android:textSize="24sp"/>
-                </LinearLayout>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <ImageButton
-                    android:id="@+id/imgBtn_rcp3"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
-                    android:scaleType="centerInside"
-                    android:layout_gravity="center_vertical"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/imgBtn_rcp2"
-                    tools:ignore="SpeakableTextPresentCheck"
-                    tools:srcCompat="@tools:sample/avatars" />
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_gravity="center_vertical">
-                    <TextView
-                        android:id="@+id/txt_rcp3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
-                        android:text="Recipe3"
-                        android:textColor="@color/black"
-                        android:textSize="24sp"/>
-                    <TextView
-                        android:id="@+id/txt_mat3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
-                        android:text="g, h, i ..."
-                        android:textColor="#7A7A7A"
-                        android:textSize="24sp"/>
-                </LinearLayout>
-            </LinearLayout>
+                android:layout_height="wrap_content">
+            </com.example.myapplication.RecipeList>
         </LinearLayout>
     </ScrollView>
     <ImageButton
