--- a/app/src/main/res/layout/mat_list.xml
+++ b/app/src/main/res/layout/mat_list.xml
@@ -3,31 +3,39 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+    android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/img_mat"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:scaleType="centerInside"
-            />
-        <TextView
-            android:id="@+id/txt_mat"
-            android:layout_width="wrap_content"
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="다진 소고기"
-            android:layout_gravity="center"
-            android:textColor="@color/black"/>
-        <TextView
-            android:id="@+id/txt_unit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="200g"
-            android:layout_gravity="center"
-            android:textColor="@color/black"/>
-    </LinearLayout>
+            app:cardBackgroundColor="#FFFFFF"
+            app:cardCornerRadius="5dp"
+            app:cardUseCompatPadding="true">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+            <ImageView
+                android:id="@+id/img_mat"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:scaleType="centerInside"
+                />
+            <TextView
+                android:id="@+id/txt_mat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="재료"
+                android:textColor="@color/black"/>
+            <TextView
+                android:id="@+id/txt_unit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="단위"
+                android:textColor="@color/black"/>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
 </LinearLayout>
