--- a/app/src/main/res/layout/recipe_list.xml
+++ b/app/src/main/res/layout/recipe_list.xml
@@ -2,46 +2,38 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/img_rcp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:scaleType="centerInside"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp">
-        <ImageView
-            android:id="@+id/recipe_image"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            android:padding="12dp"
-            tools:ignore="MissingConstraints" />
-
+        android:orientation="vertical"
+        android:layout_gravity="center_vertical">
         <TextView
-            android:id="@+id/recipe_name"
-            android:layout_width="227dp"
-            android:layout_height="31dp"
-            android:layout_marginTop="16dp"
-            android:text="TextView"
-            android:textSize="24sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/recipe_image"
-            app:layout_constraintTop_toTopOf="parent" />
-
+            android:id="@+id/txt_rcp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:text="레시피명"
+            android:textColor="@color/black"
+            android:textSize="24sp"/>
         <TextView
-            android:id="@+id/recipe_info"
-            android:layout_width="227dp"
-            android:layout_height="63dp"
-            android:layout_marginBottom="8dp"
-            android:text="TextView"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/recipe_image"
-            app:layout_constraintTop_toBottomOf="@+id/recipe_name"
-            app:layout_constraintVertical_bias="0.741"
-            tools:ignore="MissingConstraints" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
+            android:id="@+id/txt_mat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:text="재료목록"
+            android:textColor="#7A7A7A"
+            android:textSize="24sp"/>
+    </LinearLayout>
 </LinearLayout>
