--- a/app/src/main/res/layout/step_list.xml
+++ b/app/src/main/res/layout/step_list.xml
@@ -3,11 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <LinearLayout
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        app:cardBackgroundColor="#FFFFFF"
+        app:cardCornerRadius="5dp"
+        app:cardUseCompatPadding="true">
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -16,7 +20,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                android:text="1"
+                android:text="숫자"
                 android:textSize="18sp"
                 android:textColor="@color/black"/>
             <TextView
@@ -24,15 +28,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                android:text="양배추를 잘게 다집니다."
+                android:text="과정 설명"
                 android:textSize="18sp"
                 android:textColor="@color/black"/>
         </LinearLayout>
         <ImageView
             android:id="@+id/img_step"
             android:layout_width="300dp"
-            android:layout_height="100dp"
+            android:layout_height="120dp"
             android:layout_gravity="center"
             />
+    </androidx.cardview.widget.CardView>
     </LinearLayout>
-</LinearLayout>
