--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -1,131 +1,155 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity"
-    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Yummy Fridge   "
-            android:textStyle="bold"
-            android:textSize="40dp"/>
+    tools:context=".DogsRecipeActivity">
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineTop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="10dp" />
 
-        <ImageButton
-            android:id="@+id/btnmanager"
-            android:layout_width="59dp"
-            android:layout_height="59dp"
-            android:layout_gravity="right"
-            />
-    </LinearLayout>
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineStart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="30dp" />
 
-    <TabHost
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/tabhost">
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineEnd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="30dp" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineBottom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_end="30dp" />
+    <TextView
+        android:id="@+id/txt_dogs"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Dog's"
+        android:textColor="@color/black"
+        android:textSize="40sp"
+        app:layout_constraintStart_toStartOf="@id/guidelineStart"
+        app:layout_constraintTop_toTopOf="@id/guidelineTop" />
+    <TextView
+        android:id="@+id/txt_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="소고기와 양배추"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="@id/guidelineStart"
+        app:layout_constraintTop_toBottomOf="@id/txt_dogs" />
+
+    <ScrollView
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
+        app:layout_constraintStart_toStartOf="@id/guidelineStart"
+        app:layout_constraintTop_toBottomOf="@id/guidelineMid1">
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-            <TabWidget
-                android:id="@android:id/tabs"
-                android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <ImageView
+                android:id="@+id/img_main"
+                android:layout_width="350dp"
+                android:layout_height="142dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="8dp"
+                tools:srcCompat="@color/black" />
+            <TextView
+                android:id="@+id/txt_tip"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="#FFE4E1"/>
-            <FrameLayout
-                android:id="@android:id/tabcontent"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" >
-
+                android:layout_marginVertical="5dp"
+                android:text="3일 냉장보관 가능"
+                android:textColor="@color/black"
+                android:layout_gravity="center"
+                android:textSize="18sp"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/fridge"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:orientation="vertical">
-                    <ScrollView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:fillViewport="true">
-                        <ListView
-                            android:id="@+id/fridge_list"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"/>
-                    </ScrollView>
-                </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/recipe"
-                    android:orientation="vertical">
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="재료: "
-                        android:textSize="25dp"
-                        android:background="#FFC0CB"
-                        android:id="@+id/myFridge"/>
                     <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/id"></ImageView>
-                    <ScrollView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:fillViewport="true">
-                        <ListView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:id="@+id/sqlResult">
-                        </ListView>
-                    </ScrollView>
-                </LinearLayout>
+                        android:id="@+id/img_mat"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:scaleType="centerInside"
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/checklist"
-                    android:orientation="vertical">
-                    <EditText
-                        android:layout_width="match_parent"
+                        app:srcCompat="@mipmap/ic_launcher" />
+                    <TextView
+                        android:id="@+id/txt_mat"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/inputShop">
-                    </EditText>
-                    <Button
-                        android:layout_width="match_parent"
+                        android:text="다진 소고기"
+                        android:layout_gravity="center"
+                        android:textColor="@color/black"/>
+                    <TextView
+                        android:id="@+id/txt_unit"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="항목 추가"
-                        android:background="#FFC0CB"
-                        android:id="@+id/addShop"/>
-                    <ListView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/checklistview"/>
+                        android:text="200g"
+                        android:layout_gravity="center"
+                        android:textColor="@color/black"/>
                 </LinearLayout>
+            </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="조리 순서"
+                android:textColor="@color/black"
+                android:textSize="24sp"
+                android:layout_marginTop="8dp"/>
+            <ListView
+                android:id="@+id/listview1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/bookmark"
-                    android:orientation="vertical">
-                    <ScrollView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:fillViewport="true">
-                        <ListView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:id="@+id/starResult">
-                        </ListView>
-                    </ScrollView>
-                </LinearLayout>
-            </FrameLayout>
+            </ListView>
+
+            <Button
+                android:id="@+id/btn_complete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/black"
+                android:layout_gravity="center"
+                android:onClick="onButton1Clicked"
+                android:text="조리 완료"
+                />
         </LinearLayout>
-    </TabHost>
+    </ScrollView>
 
-</LinearLayout>
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineMid1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="96dp" />
+
+    <ToggleButton
+        android:id="@+id/tog_like"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:text="Like"
+        android:background="@drawable/heart_full"
+        app:layout_constraintBottom_toTopOf="@+id/guidelineMid1"
+        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
+        app:layout_constraintTop_toTopOf="@+id/guidelineTop" />
+</androidx.constraintlayout.widget.ConstraintLayout>
