--- a/app/src/main/res/layout/activity_dogs_recipe.xml
+++ b/app/src/main/res/layout/activity_dogs_recipe.xml
@@ -82,33 +82,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-                <LinearLayout
-                    android:layout_width="wrap_content"
+                <com.example.myapplication.MatList
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:id="@+id/matlist">
 
-                    <ImageView
-                        android:id="@+id/img_mat"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:scaleType="centerInside"
-
-                        app:srcCompat="@mipmap/ic_launcher" />
-                    <TextView
-                        android:id="@+id/txt_mat"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="다진 소고기"
-                        android:layout_gravity="center"
-                        android:textColor="@color/black"/>
-                    <TextView
-                        android:id="@+id/txt_unit"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="200g"
-                        android:layout_gravity="center"
-                        android:textColor="@color/black"/>
-                </LinearLayout>
+                </com.example.myapplication.MatList>
             </LinearLayout>
             <TextView
                 android:layout_width="wrap_content"
@@ -117,37 +96,12 @@
                 android:textColor="@color/black"
                 android:textSize="24sp"
                 android:layout_marginTop="8dp"/>
-            <LinearLayout
-                android:layout_width="350dp"
+            <com.example.myapplication.StepList
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:id="@+id/txt_stepNum"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
-                        android:text="1"
-                        android:textSize="18sp"
-                        android:textColor="@color/black"/>
-                    <TextView
-                        android:id="@+id/txt_step"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
-                        android:text="양배추를 잘게 다집니다."
-                        android:textSize="18sp"
-                        android:textColor="@color/black"/>
-                </LinearLayout>
-                <ImageView
-                    android:id="@+id/img_step"
-                    android:layout_width="300dp"
-                    android:layout_height="100dp"
-                    android:layout_gravity="center"
-                    tools:srcCompat="@color/black" />
-            </LinearLayout>
+                android:id="@+id/steplist">
+
+            </com.example.myapplication.StepList>
             <Button
                 android:id="@+id/btn_complete"
                 android:layout_width="wrap_content"
