--- a/app/src/main/res/layout/recipe_list.xml
+++ b/app/src/main/res/layout/recipe_list.xml
@@ -30,55 +30,15 @@
             android:textColor="@color/black"
             android:textSize="24sp" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp">
             <TextView
-                android:id="@+id/mat_first"
+                android:id="@+id/mat_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
                 android:textColor="#7A7A7A"
                 android:textSize="20sp"
-                android:text="1st">
+                android:text="재료 목록">
             </TextView>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#7A7A7A"
-                android:textSize="20sp"
-                android:text=", ">
-            </TextView>
-            <TextView
-                android:id="@+id/mat_second"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#7A7A7A"
-                android:textSize="20sp"
-                android:text="2nd">
-            </TextView>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#7A7A7A"
-                android:textSize="20sp"
-                android:text=", ">
-            </TextView>
-            <TextView
-                android:id="@+id/mat_third"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#7A7A7A"
-                android:textSize="20sp"
-                android:text="3rd">
-            </TextView>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#7A7A7A"
-                android:textSize="20sp"
-                android:text=" ...">
-            </TextView>
-        </LinearLayout>
+
     </LinearLayout>
 </LinearLayout>
